--- a/get_toronto_neighborhood.ipynb
+++ b/get_toronto_neighborhood.ipynb
@@ -645,11 +645,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![title](https://raw.githubusercontent.com/ningxiaodou/Coursera_Capstone/master/Screen%20Shot%202020-01-11%20at%208.12.17%20PM.png)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -10055,7 +10055,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](\"Screen Shot 2020-01-11 at 8.12.53 PM.png\")\n"
+    "![title](https://raw.githubusercontent.com/ningxiaodou/Coursera_Capstone/master/Screen%20Shot%202020-01-11%20at%208.12.53%20PM.png)\n"
    ]
   },
   {
